[tool.poetry]
name = "dokku-helper"
version = "0.1.0"
description = ""
authors = ["Paul Gessinger <hello@paulgessinger.com>"]
packages = [
    { include = "dokku_helper", from = "src" },
]

[tool.poetry.scripts]
dokku-helper = 'dokku_helper.cli:main'


[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
python-dotenv = "^0.13.0"
sh = "^1.13.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
